@@ -8,6 +8,7 @@ Ver.1.2.0:
 + [lib] detached backend from frontend
 * [all] small changes in the project architecture
 * [gui] more debug information
+* [gui] changed lineEdit_profile to comboBox
 * [plasmoid] edited configuration interface
 
 Ver.1.1.0 (netctl-1.7 update):
